--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MelodyConnection": "Test_Meolodies.sqlite"
+    "DefaultConnection": "Host=melodysearchmeidatabase.ct8ig60g4q3f.us-east-2.rds.amazonaws.com;Port=5432;Username=postgres;Password=ScouredElmContempt8;Database=meiDatabase",
   }
 }
